[package]
name = "compose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compose_macro = { version = "0.1.0", path = "../compose_macro" }
compose_foundation_macro = { version = "0.1.0", path = "../compose_foundation_macro" }
skia-safe = "0.66.2"
lazy_static = "1.4.0"
auto-delegate = "0.0.9"
log = "0.4.20"